修改以支持生成符合项目风格的代码

--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
         <module>protostuff-generator</module>
         <module>protostuff-cli</module>
         <module>protostuff-maven-plugin</module>
-        <module>protostuff-it</module>
+        <!--<module>protostuff-it</module>-->
     </modules>
 
     <build>
