--- a/protostuff-cli/pom.xml
+++ b/protostuff-cli/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>log4j-core</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.11</version>
+        </dependency>
+
     </dependencies>
 
 </project>
